# mcc

./: .gitignore  Cargo.toml  LICENSE  README.md
arch/: Cargo.toml
arch/src/: common.rs  emit.rs  lib.rs
arch/src/mir/: convert.rs  eliminate.rs  fold_const.rs  merge.rs  mir.rs  mod.rs  peephole.rs  skip_jump.rs
arch/src/regalloc/: liveness.rs  mod.rs  regalloc.rs  spill.rs  types.rs
arch/src/virt/: convert.rs  eliminate.rs  mod.rs  program.rs  simm.rs  (+2 more)
ast/: Cargo.toml
ast/src/: closure.rs  knormal.rs  lib.rs  mir.rs  syntax.rs
cfg/: Cargo.toml
cfg/src/: compress_jump.rs  convert.rs  lib.rs  skip_jump.rs
closure/: Cargo.toml
closure/src/: convert.rs  lib.rs
cls/: Cargo.toml
cls/src/: alias.rs  beta.rs  common.rs  convert.rs  detect_doall.rs  detect_intloop.rs  eliminate_get.rs  eliminate_var.rs  flatten.rs  fold_const.rs  lib.rs
knorm/: Cargo.toml
knorm/src/: alpha.rs  beta.rs  common.rs  compress_onehot_if.rs  convert.rs  cse.rs  detect_loop.rs  eliminate.rs  flatten.rs  fold_const.rs  inlining.rs  lib.rs  simplify_loop.rs
mcc/: Cargo.toml
mcc/src/: compile.rs  lib.rs  main.rs
mcc/tests/: test_all.rs
mir/: Cargo.toml
mir/src/: convert.rs
parser/: Cargo.toml
parser/src/: error.rs  grammer.lalrpop  lexer.rs  lib.rs  token.rs
tests/: ack.ml
tests/libs/: globals.ml  libmincaml.ml  stdlib.ml  stdlib_minrt.ml
tests/minrt/: globals.ml  minrt.ml
tests/sources/: alias-loop-rotate.ml  arraytest.ml  comexp_elim.ml  compress_if.ml  elim-get-compound.ml  elim-get-fail-cls.ml  elim-get-simple.ml  invalidation.ml  minrt.ml  strict-aliasing.ml  swx.ml
ty/: Cargo.toml
ty/src/: closure.rs  knormal.rs  lib.rs  mir.rs  syntax.rs  ty.rs
typing/: Cargo.toml
typing/src/: error.rs  lib.rs
util/: Cargo.toml
util/src/: id.rs  lib.rs  span.rs
