[package]
name = "mcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
ast = { path = "../ast" }
clap = { version = "3.0.0-rc.4", features = [ "derive" ]}
anyhow = "1.0"
ariadne = "0.1.3"