[package]
name = "mcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
typing = { path = "../typing" }
ast = { path = "../ast" }
knorm = { path = "../knorm" }
cls = { path = "../cls" }
arch = { path = "../arch" }
# cfg = { path = "../cfg" }
clap = { version = "3.0.0-rc.4", features = [ "derive" ]}
anyhow = "1.0"
ariadne = "0.1.3"
simplelog = "0.11"
log = "0.4.0"