[package]
name = "parser"
version = "0.1.0"
edition = "2021"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
ty = { path = "../ty" }
ast = { path = "../ast" }
lalrpop-util = "0.19.6"
regex = "1"

[build-dependencies]
lalrpop = "0.19.6"