[package]
name = "parser"
version = "0.1.0"
edition = "2021"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
ty = { path = "../ty" }
ast = { path = "../ast" }
plex = "0.2.5"
lalrpop-util = "0.19.6"
regex = "1"
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
lalrpop = "0.19.6"